@@ -222,6 +222,57 @@
             app:cardElevation="0dp"
             app:cardCornerRadius="12dp"
             app:cardBackgroundColor="@color/on_background_variant"
+            android:visibility="@{formData.displayHelpLive &amp;&amp; formData.treatOpenedAsOutOfStockVisible ? View.VISIBLE : View.GONE}">
+
+            <TextView
+              style="@style/Widget.Grocy.TextView.Paragraph"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:text="@string/msg_help_treat_opened_as_out_of_stock" />
+
+          </com.google.android.material.card.MaterialCardView>
+
+          <LinearLayout
+            style="@style/Widget.Grocy.LinearLayout.ListItem.TwoLine.Icon.Clickable"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="@{() -> switchTreatOpened.setChecked(!switchTreatOpened.isChecked())}"
+            android:visibility="@{formData.treatOpenedAsOutOfStockVisible ? View.VISIBLE : View.GONE}">
+
+            <ImageView
+              android:id="@+id/image_treat_opened"
+              style="@style/Widget.Grocy.ImageView.ListItem.Icon"
+              tools:ignore="ContentDescription"
+              android:src="@drawable/ic_round_open" />
+
+            <LinearLayout style="@style/Widget.Grocy.LinearLayout.ListItem.TextBox.Stretch">
+
+              <TextView
+                style="@style/Widget.Grocy.TextView.ListItem.Title"
+                android:maxLines="4"
+                android:text="@string/setting_treat_opened_as_out_of_stock" />
+
+            </LinearLayout>
+
+            <com.google.android.material.switchmaterial.SwitchMaterial
+              android:id="@+id/switch_treat_opened"
+              style="@style/Widget.Grocy.Switch"
+              android:checked="@={formData.treatOpenedAsOutOfStock}"
+              android:onCheckedChanged="@{() -> activity.startIconAnimation(imageTreatOpened, true)}" />
+
+          </LinearLayout>
+
+          <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            app:contentPadding="16dp"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="12dp"
+            app:cardBackgroundColor="@color/on_background_variant"
             android:visibility="@{formData.displayHelpLive ? View.VISIBLE : View.GONE}">
 
             <TextView
@@ -238,7 +289,7 @@
 
             <ImageView
               style="@style/Widget.Grocy.ImageView.ListItem.Icon"
-              android:src="@drawable/ic_round_open"
+              android:src="@drawable/ic_round_consume_product"
               tools:ignore="ContentDescription" />
 
             <LinearLayout style="@style/Widget.Grocy.LinearLayout.ListItem.TextBox">
