@@ -1,6 +1,7 @@
 2.2.0:
 - New: Shopping mode now groups items like on shopping list page (#430)
 - New: Open Beauty Facts lookup as second online source (#257)
+- New: Product option "Treat opened as out of stock" is available for server v3.2.0
 - Improved: Open button on consume page is now checkbox
 - Improved: Product search on stock overview is now fuzzy search (#486)
 - Fixed: App could show old data when page loading was interrupted (#409)
